Add P2P media sharing for Hls.js

--- a/src/components/syncPlay/settings/settings.template.html
+++ b/src/components/syncPlay/settings/settings.template.html
@@ -20,6 +20,10 @@
                 </label>
                 <div class="fieldDescription checkboxFieldDescription">${LabelSyncPlaySettingsEnableWebRTCHelp}</div>
             </div>
+            <div class="inputContainer inputContainer-withDescription">
+                <input is="emby-input" type="text" id="txtP2PTracker" required="required" label="${LabelSyncPlaySettingsP2PTracker}" />
+                <div class="fieldDescription">${LabelSyncPlaySettingsP2PTrackerHelp}</div>
+            </div>
             <h2 class="sectionTitle">${HeaderSyncPlayLocalPlaybackSettings}</h2>
             <div class="selectContainer">
                 <select id="selectTimeSync" is="emby-select" label="${LabelSyncPlaySettingsTimeSync}"></select>
