--- a/src/components/syncPlay/settings/settings.template.html
+++ b/src/components/syncPlay/settings/settings.template.html
@@ -21,7 +21,7 @@
                 <div class="fieldDescription checkboxFieldDescription">${LabelSyncPlaySettingsEnableWebRTCHelp}</div>
             </div>
             <div class="inputContainer inputContainer-withDescription">
-                <input is="emby-input" type="text" id="txtP2PTracker" required="required" label="${LabelSyncPlaySettingsP2PTracker}" />
+                <input is="emby-input" type="text" id="txtP2PTracker" label="${LabelSyncPlaySettingsP2PTracker}" />
                 <div class="fieldDescription">${LabelSyncPlaySettingsP2PTrackerHelp}</div>
             </div>
             <h2 class="sectionTitle">${HeaderSyncPlayLocalPlaybackSettings}</h2>
@@ -29,12 +29,47 @@
                 <select id="selectTimeSync" is="emby-select" label="${LabelSyncPlaySettingsTimeSync}"></select>
                 <div class="fieldDescription">${LabelSyncPlaySettingsTimeSyncHelp}</div>
             </div>
+            <div class="inputContainer inputContainer-withDescription">
+                <input type="number" is="emby-input" id="txtExtraTimeOffset" pattern="[0-9]*"
+                    label="${LabelSyncPlaySettingsExtraTimeOffset}" />
+                <div class="fieldDescription">${LabelSyncPlaySettingsExtraTimeOffsetHelp}</div>
+            </div>
             <div class="checkboxContainer checkboxContainer-withDescription">
                 <label>
                     <input type="checkbox" is="emby-checkbox" id="chkSyncCorrection" />
                     <span>${LabelSyncPlaySettingsSyncCorrection}</span>
                 </label>
                 <div class="fieldDescription checkboxFieldDescription">${LabelSyncPlaySettingsSyncCorrectionHelp}</div>
+            </div>
+            <div class="checkboxContainer checkboxContainer-withDescription">
+                <label>
+                    <input type="checkbox" is="emby-checkbox" id="chkSpeedToSync" />
+                    <span>${LabelSyncPlaySettingsSpeedToSync}</span>
+                </label>
+                <div class="fieldDescription checkboxFieldDescription">${LabelSyncPlaySettingsSpeedToSyncHelp}</div>
+            </div>
+            <div class="inputContainer inputContainer-withDescription">
+                <input type="number" is="emby-input" id="txtMinDelaySpeedToSync" pattern="[0-9]*" label="${LabelSyncPlaySettingsMinDelaySpeedToSync}" />
+                <div class="fieldDescription">${LabelSyncPlaySettingsMinDelaySpeedToSyncHelp}</div>
+            </div>
+            <div class="inputContainer inputContainer-withDescription">
+                <input type="number" is="emby-input" id="txtMaxDelaySpeedToSync" pattern="[0-9]*" label="${LabelSyncPlaySettingsMaxDelaySpeedToSync}" />
+                <div class="fieldDescription">${LabelSyncPlaySettingsMaxDelaySpeedToSyncHelp}</div>
+            </div>
+            <div class="inputContainer inputContainer-withDescription">
+                <input type="number" is="emby-input" id="txtSpeedToSyncDuration" pattern="[0-9]*" label="${LabelSyncPlaySettingsSpeedToSyncDuration}" />
+                <div class="fieldDescription">${LabelSyncPlaySettingsSpeedToSyncDurationHelp}</div>
+            </div>
+            <div class="checkboxContainer checkboxContainer-withDescription">
+                <label>
+                    <input type="checkbox" is="emby-checkbox" id="chkSkipToSync" />
+                    <span>${LabelSyncPlaySettingsSkipToSync}</span>
+                </label>
+                <div class="fieldDescription checkboxFieldDescription">${LabelSyncPlaySettingsSkipToSyncHelp}</div>
+            </div>
+            <div class="inputContainer inputContainer-withDescription">
+                <input type="number" is="emby-input" id="txtMinDelaySkipToSync" pattern="[0-9]*" label="${LabelSyncPlaySettingsMinDelaySkipToSync}" />
+                <div class="fieldDescription">${LabelSyncPlaySettingsMinDelaySkipToSyncHelp}</div>
             </div>
             <div class="formDialogFooter">
                 <button is="emby-button" type="submit" class="raised button-submit block btnSave formDialogFooterItem">
