Add display name for WebRTC peers in SyncPlay

--- a/src/components/syncPlay/settings/editor/advancedTab.html
+++ b/src/components/syncPlay/settings/editor/advancedTab.html
@@ -8,6 +8,10 @@
         <div class="fieldDescription checkboxFieldDescription">${LabelSyncPlaySettingsEnableWebRTCHelp}</div>
     </div>
     <div class="inputContainer inputContainer-withDescription">
+        <input is="emby-input" type="text" id="txtWebRTCDisplayName" label="${LabelSyncPlaySettingsWebRTCDisplayName}" />
+        <div class="fieldDescription">${LabelSyncPlaySettingsWebRTCDisplayNameHelp}</div>
+    </div>
+    <div class="inputContainer inputContainer-withDescription">
         <input is="emby-input" type="text" id="txtP2PTracker" label="${LabelSyncPlaySettingsP2PTracker}" />
         <div class="fieldDescription">${LabelSyncPlaySettingsP2PTrackerHelp}</div>
     </div>
